<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">TimeUsage</string>
    <string name="log_title_hint"> Enter Title for Log </string>
    <string name="log_title_label"> Title: </string>
    <string name="log_comment_label"> Comment: </string>
    <string name="log_comment_hint"> Comment about the activity </string>
    <string name="date_picker_title"> Date of activity: </string>
    <string name="new_log">Log </string>
    <string name="log_save_button"> Save </string>
    <string name="log_cancel_button"> Cancel </string>
    <string name="log_setting"> Settings </string>
    <string name="activity_type_label"> Activity Type: </string>
    <string-array name="log_activity_type">
        <item> Work </item>
        <item> Study </item>
        <item> Leisure </item>
        <item> Sport </item>
    </string-array>
    <string name="activity_duration_label"> Duration: </string>
    <string name="activity_duration_hint"> Enter the duration </string>
    <string name="activity_place_label"> Place: </string>
    <string name="activity_place_hint"> Enter the place </string>
    <string name="log_delete_button"> Delete </string>
    <string name="user_name_label"> Name: </string>
    <string name="setting_user_name"> Name </string>
    <string name="user_id_label"> ID: </string>
    <string name="setting_user_id"> ID </string>
    <string name="user_email_label"> Email: </string>
    <string name="setting_user_email"> Email </string>
    <string name="user_gender_label"> Gender: </string>
    <string name="setting_user_gender"> Gender </string>
    <string name="user_comment_label"> Comment: </string>
    <string name="setting_user_comment"> Comment </string>
</resources>
