<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="4dp">

         <ImageView
            android:id="@+id/activity_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"/>

         <ImageButton
            android:id="@+id/activity_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_toRightOf="@id/image_layout"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/textView2"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_title_label"/>

        <EditText
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/log_title_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/image_layout"
        android:layout_below="@+id/title_layout"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_comment_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText android:id="@+id/log_comment"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/log_comment_hint"/>
    </LinearLayout>
</RelativeLayout>